# minigloca

./: Makefile  README.md
doc/: ast.fig  cfg.fig  doc-macros.tex  minigloca-doc.tex  minigloca.tex  sec-analyse-vivacite.tex  sec-interpreteur-et-semantique.tex  sec-prerequis-analyse.tex  sec-sli.tex  slides.tex  subsec-blocs.tex  subsec-desc-ensembliste.tex  subsec-etiquettage.tex  subsec-fixed-point.tex  subsec-flot.tex  subsec-interpreteur.tex  subsec-monotonie.tex  subsec-semantique.tex
src/: Analysis.ml  Ast.ml  Generator.ml  Interpreter.ml  Label.ml  Meta.ml  Minigloca.ml  dune  lexer.mli  lexer.mll  main.ml  parser.mly
test/: Analysis.ml  ControlFlow.ml  Generator.ml  Interpreter.ml  Meta.ml  MiniglocaTest.ml  Semantic.ml  Syntax.ml  dune  test.ml  test_1.gloca  test_1.ml  test_2.gloca  test_2.ml  test_3.ml  test_5.ml  test_6.ml  test_7.ml
test/gloca/: test_1.gloca  test_3.gloca  test_4.gloca  test_5.gloca  test_6.gloca  test_7.gloca
